created dvc pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 __pycache__/
 *.py[cod]
 
+.dvc/cache
+
 # C extensions
 *.so
 
@@ -87,3 +89,6 @@ target/
 
 # Mypy cache
 .mypy_cache/
+/lgbm_model.pkl
+/tfidf_vectorizer.pkl
+/experiment_info.json
